[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[black]
exclude = "scripts/whitelist.py

[darglint]
docstring_style=sphinx
strictness=short
ignore_regex=
ignore=DAR401

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    ltlf2dfa/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[pylint]
disable =
    too-many-instance-attributes,
    invalid-name,
    no-value-for-parameter,
    too-many-arguments

[pylint.FORMAT]
max-line-length = 120

[mypy]
python_version = 3.10
strict_optional = True

# Per-module options:

[mypy-lark]
ignore_missing_imports = True

[mypy-sympy]
ignore_missing_imports = True

# Per-module options for tests dir:
[mypy-pytest]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
